--- a/docs/styles.css
+++ b/docs/styles.css
@@ -43,3 +43,10 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+img {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    vertical-align: top;
+}
